{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 298,
  "lineage": "a9106e7a-e987-a6e8-59ce-a847049620ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my-aws_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0410144da7b6a9a0b",
            "domain": "vpc",
            "id": "eipalloc-0410144da7b6a9a0b",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-130-53-52.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.53.52",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-aws_eip"
            },
            "tags_all": {
              "Name": "my-aws_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0568773882d492fc8",
            "arn": "arn:aws:ec2:us-east-2:842330610975:instance/i-03d8b91e9d22161cc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d8b91e9d22161cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "9AMsg",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c349aaf19ddec241",
            "private_dns": "ip-10-3-1-8.us-east-2.compute.internal",
            "private_ip": "10.3.1.8",
            "public_dns": "ec2-3-128-205-111.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.205.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0029d9f1e72908ff7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a7771a24278c1172"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090a2201ba947d326",
            "tags": {
              "CostCenter": "ABCD",
              "Environment": "prod",
              "Name": "public-server-1",
              "Owner": "akash"
            },
            "tags_all": {
              "CostCenter": "ABCD",
              "Environment": "prod",
              "Name": "public-server-1",
              "Owner": "akash"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a7771a24278c1172"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MYIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842330610975:internet-gateway/igw-03e6145d129c95857",
            "id": "igw-03e6145d129c95857",
            "owner_id": "842330610975",
            "tags": {
              "Name": "MYIGW"
            },
            "tags_all": {
              "Name": "MYIGW"
            },
            "vpc_id": "vpc-0231cd9f9e77b7d27"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "MYNAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0410144da7b6a9a0b",
            "connectivity_type": "public",
            "id": "nat-086c5b0eb8a069ff0",
            "network_interface_id": "eni-02309f6f3143187eb",
            "private_ip": "10.3.1.5",
            "public_ip": "3.130.53.52",
            "subnet_id": "subnet-090a2201ba947d326",
            "tags": {
              "Name": "my-aws_eip-nat"
            },
            "tags_all": {
              "Name": "my-aws_eip-nat"
            }
          },
          "dependencies": [
            "aws_eip.my-aws_eip",
            "aws_internet_gateway.MYIGW",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842330610975:route-table/rtb-00450142ad42fc8da",
            "id": "rtb-00450142ad42fc8da",
            "owner_id": "842330610975",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-086c5b0eb8a069ff0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0231cd9f9e77b7d27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my-aws_eip",
            "aws_internet_gateway.MYIGW",
            "aws_nat_gateway.MYNAT",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842330610975:route-table/rtb-0ff4c4ddf22140c8d",
            "id": "rtb-0ff4c4ddf22140c8d",
            "owner_id": "842330610975",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e6145d129c95857",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0231cd9f9e77b7d27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MYIGW",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b641c9afb8882da0",
            "route_table_id": "rtb-00450142ad42fc8da",
            "subnet_id": "subnet-0606bcc30f1a4a13b"
          },
          "dependencies": [
            "aws_eip.my-aws_eip",
            "aws_internet_gateway.MYIGW",
            "aws_nat_gateway.MYNAT",
            "aws_route_table.private",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00acac2adff78da6f",
            "route_table_id": "rtb-00450142ad42fc8da",
            "subnet_id": "subnet-054c0dab8294e7748"
          },
          "dependencies": [
            "aws_eip.my-aws_eip",
            "aws_internet_gateway.MYIGW",
            "aws_nat_gateway.MYNAT",
            "aws_route_table.private",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ab425dddcc3ef4f",
            "route_table_id": "rtb-0ff4c4ddf22140c8d",
            "subnet_id": "subnet-090a2201ba947d326"
          },
          "dependencies": [
            "aws_internet_gateway.MYIGW",
            "aws_route_table.public",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842330610975:security-group/sg-0a7771a24278c1172",
            "description": "Allow ssh and port 80 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7771a24278c1172",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "custom for web-request",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh ",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "842330610975",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0231cd9f9e77b7d27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842330610975:subnet/subnet-0606bcc30f1a4a13b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.3.10.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0606bcc30f1a4a13b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842330610975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0231cd9f9e77b7d27"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842330610975:subnet/subnet-054c0dab8294e7748",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.3.20.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054c0dab8294e7748",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842330610975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0231cd9f9e77b7d27"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842330610975:subnet/subnet-090a2201ba947d326",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.3.1.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090a2201ba947d326",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842330610975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0231cd9f9e77b7d27"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:842330610975:vpc/vpc-0231cd9f9e77b7d27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0f6b76140c716d40c",
            "default_route_table_id": "rtb-06a6def505d6d92fc",
            "default_security_group_id": "sg-049210d8bbf36c278",
            "dhcp_options_id": "dopt-0b5ddb48cd62af606",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0231cd9f9e77b7d27",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a6def505d6d92fc",
            "owner_id": "842330610975",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}